# ModernDesignPatterns

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
AbstractFactoryPattern/: AbstractFactory.hpp  ColorFactory.hpp  Colors.hpp  Factory.hpp  Main.cpp  README.md  ShapeFactory.hpp  Shapes.hpp
AbstractFactoryPattern/doc/: abstract_factory_diagram.txt
FactoryPattern/: AnimalFactory.hpp  Animals.hpp  Factory.hpp  Main.cpp  README.md
FactoryPattern/doc/: factory_diagram.txt
ObserverPattern/: Main.cpp  ObserverPattern.hpp  README.md  Subject.hpp
ObserverPattern/doc/: observer_diagram.txt
SingletonPattern/: Main.cpp  README.md  Singleton.hpp
SingletonPattern/doc/: singleton_diagram.txt
StrategyPattern/: Algorithms.hpp  Container.hpp  Main.cpp  README.md  StrategyPattern.md
StrategyPrototypePattern/: Algorithms.hpp  Container.hpp  Main.cpp  README.md
StrategyPrototypePattern/doc/: strategy_diagram.txt
